--- a/PdfToJwwConverter/Properties/Resources.ja.resx
+++ b/PdfToJwwConverter/Properties/Resources.ja.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,49 +117,48 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Cancel" xml:space="preserve">
-    <value>Cancel</value>
-  </data>
-  <data name="Canceled" xml:space="preserve">
-    <value>Canceled</value>
-  </data>
-  <data name="CombineText" xml:space="preserve">
-    <value>Combine text</value>
-  </data>
-  <data name="Completed" xml:space="preserve">
-    <value>Completed</value>
-  </data>
-  <data name="Confirmation" xml:space="preserve">
-    <value>Confirmation</value>
-  </data>
-  <data name="Convert" xml:space="preserve">
-    <value>Convert</value>
-  </data>
-  <data name="Converting" xml:space="preserve">
-    <value>Converting...  ({0}/{1}) {2}"</value>
-    <comment>0:page 1:max 2:pathname</comment>
-  </data>
-  <data name="Options" xml:space="preserve">
-    <value>Options</value>
-  </data>
-  <data name="Overwrite" xml:space="preserve">
-    <value>Overwrite</value>
-  </data>
-  <data name="OverwriteConfirm" xml:space="preserve">
-    <value>{0} is already exist.\nOverwrite?</value>
+  <data name="UnifyKanji" xml:space="preserve">
+    <value>一部の文字（康熙部首など）を変換する</value>
   </data>
   <data name="Page" xml:space="preserve">
-    <value>Page</value>
+    <value>ページ</value>
+  </data>
+  <data name="Overwrite" xml:space="preserve">
+    <value>上書きする</value>
+  </data>
+  <data name="Options" xml:space="preserve">
+    <value>オプション</value>
   </data>
   <data name="PageNumberExplanation" xml:space="preserve">
-    <value>Enter the page numbers or ranges separated by commas.
-Example1: 1 Example2: 2, 3  Example3: 1-3
+    <value>ページ番号または範囲をコンマで区切って入力してください。
+例1：1　例2：2, 3　例3：1-3
 </value>
   </data>
-  <data name="Scale" xml:space="preserve">
-    <value>Scale</value>
+  <data name="Converting" xml:space="preserve">
+    <value>変換中...  ({0}/{1}) {2}"</value>
   </data>
-  <data name="UnifyKanji" xml:space="preserve">
-    <value>Unify kanji(for Japanese)</value>
+  <data name="Convert" xml:space="preserve">
+    <value>変換</value>
+  </data>
+  <data name="Confirmation" xml:space="preserve">
+    <value>確認</value>
+  </data>
+  <data name="Completed" xml:space="preserve">
+    <value>完了</value>
+  </data>
+  <data name="CombineText" xml:space="preserve">
+    <value>文字を結合する</value>
+  </data>
+  <data name="Canceled" xml:space="preserve">
+    <value>キャンセルしました</value>
+  </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>キャンセル</value>
+  </data>
+  <data name="OverwriteConfirm" xml:space="preserve">
+    <value>{0} のファイルを上書きしますか？</value>
+  </data>
+  <data name="Scale" xml:space="preserve">
+    <value>縮尺</value>
   </data>
 </root>
