タイトルにバージョン追加。 HPへのリンク追加。 メッセージエリアをステータスバーに変更。

--- a/PdfToJwwConverter/Properties/Resources.ja.resx
+++ b/PdfToJwwConverter/Properties/Resources.ja.resx
@@ -161,4 +161,7 @@
   <data name="Scale" xml:space="preserve">
     <value>縮尺</value>
   </data>
+  <data name="Paper" xml:space="preserve">
+    <value>用紙</value>
+  </data>
 </root>
