--- a/PdfToJwwConverter/Properties/Resources.resx
+++ b/PdfToJwwConverter/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AppName" xml:space="preserve">
+    <value>PDF to JWW Converter</value>
+  </data>
   <data name="Cancel" xml:space="preserve">
     <value>Cancel</value>
   </data>
@@ -155,6 +158,16 @@
     <value>Enter the page numbers or ranges separated by commas.
 Example1: 1 Example2: 2, 3  Example3: 1-3
 </value>
+  </data>
+  <data name="Paper" xml:space="preserve">
+    <value>Paper</value>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="PdfToJww" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PdfToJww.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="PdfToJww1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PdfToJww.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Scale" xml:space="preserve">
     <value>Scale</value>
